@@ -12,3 +12,4 @@ Other contributors (as mentionend in :copyright:s) are:
 - Ben Bangert
 - Tiberius Teng
 - Adam Blinkinsop <blinks@acm.org>
+- Kirk McDonald
