@@ -27,6 +27,8 @@ Version 0.8 (in development)
 
 - Added a Redcode lexer, thanks to Adam Blinkinsop.
 
+- Added a D lexer, thanks to Kirk McDonald.
+
 
 Version 0.7.1
 -------------
